# discord_bots_rs

./: .gitignore  Cargo.toml  sqlx-data.json
migrations/: 20220120044129_youtubeInit.sql  20220405023408_poketcg.sql
src/: main.rs
src/commands/: meme.rs  mod.rs  poketcg.rs  youtube.rs
src/commands/poketcg/: binder.rs  card.rs  card_image.rs  decks.rs  mod.rs  packs.rs  player.rs  player_card.rs  quiz.rs  sets.rs  slot.rs  store.rs  timers.rs  trade.rs  upgrade.rs
src/commands/poketcgfn/: mod.rs
