[package]
name = "discord_bots_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0"
lazy_static = "1.4.0"
rand = "0.8.5"
mongodb = { version = "2.1"}
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4"
log = "0.4.16"
futures = "0.3"
image = "0.24"
convert_case = "0.5"